kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kiii-project-service
  namespace: kiii
spec:
  selector:
    app: kiii-project
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
